// Code generated by protoc-gen-platform protobuf/data-catalog. DO NOT EDIT.
syntax = "proto3";

package platform.ontology.v2alpha;

import "platform/options/v2/annotations.proto";


option (platform.options.v2.network_file) = {type: NETWORK_TYPE_INTERNET;};
option (platform.options.v2.api_file) = {
  type: API_TYPE_PUBLIC;
  cycle: API_LIFECYCLE_ALPHA;
  interface: API_INTERFACE_TYPE_OPERATIONAL;
};

option go_package = "github.com/openecosystems/ecosystem/libs/public/go/sdk/gen/platform/ontology/v2alpha;ontologyv2alphapb";

message SpecDataCatalog {
    Audit audit = 1;
    Cli cli = 2;
    Communication communication = 3;
    Configuration configuration = 4;
    Cryptography cryptography = 5;
    Dns dns = 6;
    Ecosystem ecosystem = 7;
    Edge edge = 8;
    Iam iam = 9;
    Mesh mesh = 10;
    Ontology ontology = 11;
    Options options = 12;
    Reference reference = 13;
    Spec spec = 14;
    System system = 15;
    Type type = 16;
}

message Audit {

    AuditV2Alpha audit_v2alpha = 1;
}

message Cli {
}

message Communication {

    PreferenceCenterV1Beta preference_center_v1beta = 2;

    PreferenceCenterV1Alpha preference_center_v1alpha = 3;
}

message Configuration {

    ConfigurationV2Alpha configuration_v2alpha = 4;
}

message Cryptography {

    CertificateV2Alpha certificate_v2alpha = 5;
}

message Dns {
}

message Ecosystem {

    EcosystemV2Alpha ecosystem_v2alpha = 6;
}

message Edge {
}

message Iam {

    AccountV2Alpha account_v2alpha = 7;

    AccountAuthorityV2Alpha account_authority_v2alpha = 8;
}

message Mesh {
}

message Ontology {
}

message Options {
}

message Reference {

    ReferenceV2Alpha reference_v2alpha = 9;
}

message Spec {
}

message System {

    SystemV2Alpha system_v2alpha = 10;
}

message Type {
}


message AuditV2Alpha {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType created_at = 2;
  platform.options.v2.ClassificationType updated_at = 3;
  platform.options.v2.ClassificationType entry = 4;
  platform.options.v2.ClassificationType jurisdiction = 5;

}


message ConfigurationV2Alpha {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType organization_slug = 2;
  platform.options.v2.ClassificationType workspace_slug = 3;
  platform.options.v2.ClassificationType created_at = 4;
  platform.options.v2.ClassificationType updated_at = 5;
  platform.options.v2.ClassificationType source_id = 6;
  platform.options.v2.ClassificationType type = 7;
  platform.options.v2.ClassificationType status = 8;
  platform.options.v2.ClassificationType status_details = 9;
  platform.options.v2.ClassificationType parent_id = 10;
  platform.options.v2.ClassificationType data_catalog = 13;
  platform.options.v2.ClassificationType clinical_catalog = 14;
  platform.options.v2.ClassificationType platform_configuration = 15;
  platform.options.v2.ClassificationType platform_configurations = 16;
  platform.options.v2.ClassificationType solution_configurations = 17;
  platform.options.v2.ClassificationType connector_configurations = 18;

}


message CertificateV2Alpha {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType created_at = 2;
  platform.options.v2.ClassificationType updated_at = 3;
  platform.options.v2.ClassificationType name = 4;
  platform.options.v2.ClassificationType duration = 6;
  platform.options.v2.ClassificationType certificate = 7;

}


message EcosystemV2Alpha {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType slug = 2;
  platform.options.v2.ClassificationType created_at = 3;
  platform.options.v2.ClassificationType updated_at = 4;
  platform.options.v2.ClassificationType source_id = 5;
  platform.options.v2.ClassificationType type = 6;
  platform.options.v2.ClassificationType status = 7;
  platform.options.v2.ClassificationType status_details = 8;
  platform.options.v2.ClassificationType name = 9;
  platform.options.v2.ClassificationType short_description = 10;
  platform.options.v2.ClassificationType description = 11;
  platform.options.v2.ClassificationType cidr = 12;

}


message AccountV2Alpha {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType created_at = 2;
  platform.options.v2.ClassificationType updated_at = 3;
  platform.options.v2.ClassificationType credential = 4;

}


message AccountAuthorityV2Alpha {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType created_at = 2;
  platform.options.v2.ClassificationType updated_at = 3;
  platform.options.v2.ClassificationType credential = 4;

}


message ReferenceV2Alpha {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType created_at = 2;
  platform.options.v2.ClassificationType updated_at = 3;

}


message SystemV2Alpha {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType enabled_at = 2;
  platform.options.v2.ClassificationType created_at = 3;
  platform.options.v2.ClassificationType updated_at = 4;

}


message PreferenceCenterV1Beta {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType created_at = 2;
  platform.options.v2.ClassificationType updated_at = 3;
  platform.options.v2.ClassificationType anonymous_id = 4;
  platform.options.v2.ClassificationType email = 5;
  platform.options.v2.ClassificationType external_id = 6;
  platform.options.v2.ClassificationType phone_number = 7;
  platform.options.v2.ClassificationType first_name = 8;
  platform.options.v2.ClassificationType last_name = 9;
  platform.options.v2.ClassificationType postal_code = 10;
  platform.options.v2.ClassificationType city = 11;
  platform.options.v2.ClassificationType state_province_region = 12;
  platform.options.v2.ClassificationType country = 13;
  platform.options.v2.ClassificationType list_ids = 14;
  platform.options.v2.ClassificationType segment_ids = 15;
  platform.options.v2.ClassificationType email_subscription = 16;

}


message PreferenceCenterV1Alpha {
    platform.options.v2.ClassificationType id = 1;
  platform.options.v2.ClassificationType created_at = 2;
  platform.options.v2.ClassificationType updated_at = 3;
  platform.options.v2.ClassificationType anonymous_id = 4;
  platform.options.v2.ClassificationType email = 5;
  platform.options.v2.ClassificationType external_id = 6;
  platform.options.v2.ClassificationType phone_number = 7;
  platform.options.v2.ClassificationType first_name = 8;
  platform.options.v2.ClassificationType last_name = 9;
  platform.options.v2.ClassificationType postal_code = 10;
  platform.options.v2.ClassificationType city = 11;
  platform.options.v2.ClassificationType state_province_region = 12;
  platform.options.v2.ClassificationType country = 13;
  platform.options.v2.ClassificationType list_ids = 14;
  platform.options.v2.ClassificationType segment_ids = 15;
  platform.options.v2.ClassificationType email_subscription = 16;

}
